--- a/app/.pollination/config.ini
+++ b/app/.pollination/config.ini
@@ -1,4 +1,4 @@
 [app]
-name = export-room_properties
-slug = export-room_properties
+name = export-room-properties
+slug = export-room-properties
 owner = marentette
